--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header>
             <nav class="container">
                 <a href="#sobre" class="logo nav-link">
-                    <img src="imagens/iconFav.png" alt="Logo Diogo Pianista" class="logo-imagem">
+                    <img src="iconFav.png" alt="Logo Diogo Pianista" class="logo-imagem">
                     <span>Diogo Pianista</span>
                 </a>
                 <ul>
