--- a/index.html
+++ b/index.html
@@ -77,9 +77,21 @@
                             </div>
                         </div>
                         <div class="sobre-mim-imagem">
-                            <img src="imagens/ftDiogo2.PNG" alt="Diogo Ladislau Pedro">
+                            <div class="carousel-container">
+
+                                <div class="carousel-track">
+                                    <img src="imagens/ftDiogo3.JPG" alt="Diogo tocando piano" class="carousel-slide">
+                                    <img src="imagens/regendo.jpeg" alt="Diogo regendo orquestra"
+                                        class="carousel-slide">
+                                    <img src="imagens/ftDiogo2.PNG" alt="Diogo tocando piano" class="carousel-slide">
+                                </div>
+
+                                <button class="carousel-button prev" aria-label="Imagem anterior">&#10094;</button>
+                                <button class="carousel-button next" aria-label="Próxima imagem">&#10095;</button>
+                            </div>
                         </div>
                     </div>
+                    <br>
                 </div>
             </section>
 
