nw VF controle.html

--- a/controle.html
+++ b/controle.html
@@ -197,9 +197,13 @@
                         <input type="text" id="instrumento-principal">
                     </div>
                     <div class="form-group">
-                        <label for="nivel-proficiencia">Nível</label>
-                        <input type="text" id="nivel-proficiencia">
-                    </div>
+        <label for="nivel-proficiencia">Nível</label>
+        <select id="nivel-proficiencia">
+            <option value="Iniciante">Iniciante</option>
+            <option value="Intermediário">Intermediário</option>
+            <option value="Avançado">Avançado</option>
+        </select>
+    </div>
                 </div>
                 <div class="form-group">
                     <label for="valor-mensalidade">Valor da Mensalidade</label>
